Fix <i> layout issue

--- a/PHASE_2/Application_SourceCode/styles/InfoPage.module.scss
+++ b/PHASE_2/Application_SourceCode/styles/InfoPage.module.scss
@@ -1,10 +1,4 @@
 
-.infoPage i {
-  display: block;
-  font-size: 0.9em;
-  margin: 2px 0;
-}
-
 .infoPage h2 {
   margin: 16px 0 2px 0;
   font-size: 1em;
